Bug 9982 - 2.6.25-rc1 panics on boot
Summary: 2.6.25-rc1 panics on boot
Status: CLOSED CODE_FIX
Alias: None
Product: ACPI
Classification: Unclassified
Component: Power-Thermal (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: ykzhao
URL:
Keywords:
Depends on:
Blocks: 9832
  Show dependency tree
 
Reported: 2008-02-13 16:41 UTC by Rafael J. Wysocki
Modified: 2008-02-22 22:00 UTC (History)
3 users (show)

See Also:
Kernel Version: 2.6.25-rc1
Subsystem:
Regression: Yes
Bisected commit-id:


Attachments
acpidump output (176.28 KB, application/octet-stream)
2008-02-13 22:29 UTC, Dhaval Giani
Details
acpidump output (176.28 KB, application/octet-stream)
2008-02-13 22:30 UTC, Dhaval Giani
Details
full dmesg on a crash. (17.25 KB, application/octet-stream)
2008-02-13 22:31 UTC, Dhaval Giani
Details
try the debug patch (833 bytes, patch)
2008-02-13 23:32 UTC, ykzhao
Details | Diff
dmesg of successful boot (30.96 KB, application/octet-stream)
2008-02-13 23:33 UTC, Dhaval Giani
Details
dmesg with "acpi.debug_layer=0x01010000 acpi.debug_level=0x1f maxcpus=1" (46.54 KB, application/octet-stream)
2008-02-14 00:54 UTC, Dhaval Giani
Details

Description Rafael J. Wysocki 2008-02-13 16:41:45 UTC
Subject         : 2.6.25-rc1 panics on boot
Submitter       : Dhaval Giani <dhaval@linux.vnet.ibm.com>
Date            : 2008-02-13 18:03
References      : http://lkml.org/lkml/2008/2/13/363
Handled-By      : Chris Snook <csnook@redhat.com>

This entry is being used for tracking a regression from 2.6.24.  Please don't
close it until the problem is fixed in the mainline.
Comment 1 ykzhao 2008-02-13 21:54:49 UTC
Hi, Rafael
   Will you please attach the outpuf of acpidump?
   Thanks.
Comment 2 Dhaval Giani 2008-02-13 22:29:38 UTC
Created attachment 14829 [details]
acpidump output
Comment 3 Dhaval Giani 2008-02-13 22:30:07 UTC
Created attachment 14830 [details]
acpidump output
Comment 4 Dhaval Giani 2008-02-13 22:31:01 UTC
Created attachment 14831 [details]
full dmesg on a crash.
Comment 5 ykzhao 2008-02-13 23:11:00 UTC
Thanks for the info.
Will you please try to boot the system with the option of "acpi.debug_layer=0x01000000 acpi.debug_level=0x1f" and attach the output of dmesg?
Thanks.
Comment 6 Len Brown 2008-02-13 23:29:03 UTC
> BIOS reported wrong ACPI id for the processor

What this failure from a cold boot after power-on, or a kexec?

please attach the dmesg corresponding to the successful 2.6.24 boot.
Comment 7 ykzhao 2008-02-13 23:32:44 UTC
Created attachment 14832 [details]
try the debug patch

Will you please try the debug patch and see whether the error disappears ?
Thanks.
Comment 8 Dhaval Giani 2008-02-13 23:32:57 UTC
On Wed, Feb 13, 2008 at 11:29:03PM -0800, bugme-daemon@bugzilla.kernel.org wrote:
> http://bugzilla.kernel.org/show_bug.cgi?id=9982
> 
> 
> 
> 
> 
> ------- Comment #6 from len.brown@intel.com  2008-02-13 23:29 -------
> > BIOS reported wrong ACPI id for the processor
> 
> What this failure from a cold boot after power-on, or a kexec?
> 

Both.

> please attach the dmesg corresponding to the successful 2.6.24 boot.
> 

Will attach, (it will be dmesg corresponding to a 2.6.24 boot with some
scheduler patches added and maxcpus=1)
Comment 9 Dhaval Giani 2008-02-13 23:33:46 UTC
Created attachment 14833 [details]
dmesg of successful boot

this is with maxcpus=2. if you want with maxcpus=1, please let me know. i will get that for you.
Comment 10 Dhaval Giani 2008-02-13 23:36:31 UTC
On Wed, Feb 13, 2008 at 11:32:44PM -0800, bugme-daemon@bugzilla.kernel.org wrote:
> http://bugzilla.kernel.org/show_bug.cgi?id=9982
> 
> 
> 
> 
> 
> ------- Comment #7 from yakui.zhao@intel.com  2008-02-13 23:32 -------
> Created an attachment (id=14832)
>  --> (http://bugzilla.kernel.org/attachment.cgi?id=14832&action=view)
> try the debug patch
> 
> Will you please try the debug patch and see whether the error disappears ?
> Thanks.
> 

Will try it and get back to you.

> 
> -- 
> Configure bugmail: http://bugzilla.kernel.org/userprefs.cgi?tab=email
> ------- You are receiving this mail because: -------
> You are on the CC list for the bug, or are watching someone who is.
Comment 11 Dhaval Giani 2008-02-13 23:46:33 UTC
On Wed, Feb 13, 2008 at 11:32:44PM -0800, bugme-daemon@bugzilla.kernel.org wrote:
> http://bugzilla.kernel.org/show_bug.cgi?id=9982
> 
> 
> 
> 
> 
> ------- Comment #7 from yakui.zhao@intel.com  2008-02-13 23:32 -------
> Created an attachment (id=14832)
>  --> (http://bugzilla.kernel.org/attachment.cgi?id=14832&action=view)
> try the debug patch
> 
> Will you please try the debug patch and see whether the error disappears ?
> Thanks.
> 

Yes it boots. If that is the final fix, please add a
Tested-by: Dhaval Giani <dhaval@linux.vnet.ibm.com>
Comment 12 ykzhao 2008-02-14 00:19:42 UTC
Thanks for the confirming.
   Will you please try the boot option of "acpi.debug_layer=0x01010000 acpi.debug_level=0x1f maxcpus=1" and attatch the output of dmesg? 
Thanks.
Comment 13 Dhaval Giani 2008-02-14 00:54:37 UTC
Created attachment 14834 [details]
dmesg with "acpi.debug_layer=0x01010000
acpi.debug_level=0x1f maxcpus=1"
Comment 14 Len Brown 2008-02-14 23:17:48 UTC
marking RESOLVED as a bug fix has been proposed.
(Will mark CLOSED only after the production fix is upstream.)
Comment 15 Len Brown 2008-02-15 15:38:51 UTC
patch in comment #7 applied to acpi-test
Comment 16 Rafael J. Wysocki 2008-02-18 07:26:48 UTC
Regressions list annotation:
Patch : http://bugzilla.kernel.org/show_bug.cgi?id=9982#c7
Comment 17 Rafael J. Wysocki 2008-02-18 07:28:38 UTC
Regressions list annotation:
Handled-By : ykzhao <yakui.zhao@intel.com>
Comment 18 Len Brown 2008-02-22 22:00:11 UTC
patch in comment #7 shipped in Linux-2.6.25-rc2-git6,
closed.

Note You need to log in before you can comment on or make changes to this bug.